Clean-up + extending experiments.